
if(NOT DNSSD_FOUND)
  return()
endif()

set(HEADERS)
set(SOURCES
  gpu_sd.cpp)

include_directories(${DNSSD_INCLUDE_DIRS})
set(LINK_LIBRARIES ${DNSSD_LIBRARIES} gpusd)

if(APPLE)
  add_definitions(-DGPUSD_CGL)
  list(APPEND LINK_LIBRARIES gpusd_cgl)
endif()
if(X11_FOUND)
  add_definitions(-DGPUSD_GLX)
  list(APPEND LINK_LIBRARIES gpusd_glx)
endif()
if(WIN32)
  add_definitions(-DGPUSD_WGL)
  list(APPEND LINK_LIBRARIES gpusd_wgl ws2_32)
endif()

find_package(Boost COMPONENTS program_options) 
if(Boost_FOUND)
  add_definitions(-DGPUSD_BOOST)
  include_directories(SYSTEM ${Boost_INCLUDE_DIRS})
  list(APPEND LINK_LIBRARIES ${Boost_PROGRAM_OPTIONS_LIBRARY})
else()
  message(STATUS "boost::program_options missing, command line options not available")
endif()

source_group(\\ FILES ${SOURCES} ${HEADERS})
add_executable(gpu_sd ${SOURCES} ${HEADERS})
target_link_libraries(gpu_sd ${LINK_LIBRARIES})
if(CMAKE_PROJECT_NAME MATCHES "gpusd")
  install(TARGETS gpu_sd DESTINATION bin COMPONENT daemon)
endif()
